# KivyMd

./: build_web.py  deploy.py  fix_dialogs.py  flet.yaml  main.py  pyproject.toml  requirements.txt  web_main.py  wsgi.py
assets/: manifest.json
authentication/: user_types.py
authentication/models/: user_model.py
authentication/screens/: login_screen.py
authentication/services/: auth_service.py
calculo_energia/: __init__.py  config.py
calculo_energia/models/: __init__.py  energia_barra_model.py
calculo_energia/screens/: __init__.py  energia_edit_screen.py  energia_main_screen.py  energia_view_screen.py
calculo_energia/services/: __init__.py  energia_service.py
core/: app.py  config.py  database.py  logger.py  screen_manager.py  web_storage.py
dashboard/screens/: __init__.py  main_dashboard.py
database/: __init__.py  perdidas_matanzas.db
database/migrations/: __init__.py  create_transferencia_consumos.py
database/seeds/: __init__.py  facturacion_seeds.py
docs/: perdidas_matanzas.db
facturacion/: __init__.py
facturacion/models/: __init__.py  facturacion_model.py
facturacion/screens/: __init__.py  facturacion_edit_screen.py  facturacion_main_screen.py  facturacion_transfers_screen.py
facturacion/services/: __init__.py  facturacion_service.py
infoperdidas/: __init__.py
infoperdidas/models/: __init__.py  perdidas_model.py
infoperdidas/screens/: __init__.py  infoperdidas_main_screen.py  infoperdidas_planes_screen.py
infoperdidas/services/: __init__.py  perdidas_service.py
l_ventas/: __init__.py
l_ventas/models/: __init__.py
(+10 files in other folders)
